z-index menu fix

--- a/components/Menu/MainMenu.module.sass
+++ b/components/Menu/MainMenu.module.sass
@@ -1,11 +1,11 @@
 @import '../../sass/variables'
 
 .main-menu
-  z-index: $zindex-fixed
+  z-index: $zindex-fixed + 1
   display: block
 
   .overlay
-    z-index: $zindex-fixed + 1
+    z-index: $zindex-fixed + 2
     position: fixed
     top: 0
     left: 0
@@ -20,7 +20,7 @@
   .menu-container
     display: flex
     flex-direction: column
-    z-index: $zindex-fixed + 2
+    z-index: $zindex-fixed + 3
     position: fixed
     top: 0
     right: 0
